--- a/app/package.json
+++ b/app/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "app",
+  "name": "todo-app",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "express": "^4.18.2"
   },
-  "keywords": [],
-  "author": "",
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "keywords": ["to-do", "node", "express"],
+  "author": "Your Name",
   "license": "ISC",
-  "description": ""
+  "description": "A simple to-do application using Node.js and Express"
 }
