--- a/app/package.json
+++ b/app/package.json
@@ -1,20 +1,21 @@
 {
   "name": "todo-app",
   "version": "1.0.0",
+  "description": "A simple to-do list application",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
-  },
-  "keywords": ["to-do", "node", "express"],
+  "keywords": [
+    "todo",
+    "express",
+    "node"
+  ],
   "author": "Your Name",
-  "license": "ISC",
-  "description": "A simple to-do application using Node.js and Express"
+  "license": "ISC"
 }
